Notebook update commit

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center> <img src=\"https://jaliscocomovamos.org/wp-content/uploads/2021/04/iteso-logo.jpg\" align=\"center\" width=\"960\" height=\"480\"/> </center>"
+    "<center> <img src=\"https://oci02.img.iteso.mx/Otros/60/Fondo-transparente/Logo-ITESO-Principal-Sinfondo-vertical.png\" align=\"center\" width=\"960\" height=\"480\"/> </center>"
    ]
   },
   {
@@ -59,7 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color= #6B6B6B> <font size = 3>  Include here a description of the whole work, use no more than 400 words, you can use **Bold** and *Italic* highlights, also you can inclue [links](www.iteso.mx). Usually is a good strategy to generate this text at the very end of the process, since you have to include all aspects of the work, from a brief introduction, to problem definitions and methods used, to finally the results found. </font>"
+    "<font color= #6B6B6B> <font size = 3>  The main premise of the mathematical financial analysis has always been trying to correctly estimate or predict the future behaviour of the price of any asset in order to get the best deal possible when trading it. As such, this work describes the employment of two well known economic models that delve into the work of theoretical asset pricing: <a href='https://oxford.universitypressscholarship.com/view/10.1093/acprof:oso/9780199585496.001.0001/acprof-9780199585496#:~:text=theoretical%20asset%20pricing.-,Asset%20pricing%20is%20developed%20around%20the%20concept%20of%20a%20state,and%20risk%20in%20asset%20valuation.'>The Asset Pricing Theory</a></font> and the <a href='https://onlinelibrary.wiley.com/doi/10.1111/j.1540-6261.1984.tb03897.x'>Implicit Measure of the Effective Bid-Ask Spread in Efficent Market</a></font><font color= #6B6B6B> <font size = 3>, also known as the Roll Model. This two models will be compared to real-world trading data in order to measure their effectivness. </font>\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -87,7 +89,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an introduction, normally, it is done at the very end, when all the other content in the notebook is completed but just before the abstract (which is short version of the introduction) ... "
+    "Fair Value refers to the price agreed upon to by a willing buyer and a seller (Chen, 2021) .This value, under certain market conditions, can be mathematically modeled, and thus, estimated or forecasted.\n",
+    "\n",
+    " Obviating the challenged posed by the not-ideal conditions of the market (agents are not neutral to risk, or not everyone possesses all the information necessary to consider the market as an efficent market), the forecasting of financial prices is not as straightforward as coming with an equation that can describe with 100% accuracy all factors intervening in its value, so the best way to model it, is through a stochastic process.\n",
+    " In probability theory, a stochastic process is a mathematical object usually defined as a family of random variables (Dobb, 1990). Based on their properties, stochastic processes can be grouped into various categories, relevant to this work are: random walks and martingales.\n",
+    "\n",
+    "The so-called Asset Pricing Theory Model utilizes a special case of a stochastic process, a martingale, to model the forecasting of the price of an asset. The basic premise that can define a martingale is a sequence of random variables for which, at a particular time, the expectation for the next value in the sequence is equal to the present value, regardless of all previous values.\n",
+    "$$P_t = E[P_{t+1}] $$\n",
+    "(Muñoz-Elguezabal, 2017)\n",
+    "\n",
+    "A simple implicit measue of the effective Bid-Ask spread in an Efficent Market, is the name given by Richard Roll to the model that aims to measure the effective bid-ask spread in the orderbook of a given market. This model is given by the equation:\n",
+    "$$Spread = 2 \\sqrt{-cov} $$\n",
+    "Where the covariance is given by the first-order serial autocovariance of the price changes. \n",
+    "$$cov(\\Delta p_t,\\Delta p_{t-j})$$\n",
+    "(ROLL, 1984)\n",
+    "\n",
+    "As such, the following models will be analyzed in their effectiveness in modeling the market by comparing their theoretical results to real-world trading data of the settled price of exchange of Bitcoin / USD.\n",
+    "\n",
+    "\n",
+    "The following work is subdivided into the following sections:\n",
+    "\n",
+    "- Install/Load Packages and Dependencies : In this section the python packages and file dependencies will be detailed in case the reader would like to replicate the results of this work.\n",
+    "- Data Description: Here the data used in the models will be presented.\n",
+    "- Asset Pricing Theory: The first model will be explored through 3 experiments detailed in the pertaining section.- Roll Model: Here the second model will be expanded upon, and its calculations explained.\n",
+    "- Results: Here, general results, graphs and remarks for each of the experiments will be presented.\n"
    ]
   },
   {
@@ -101,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> 2. Install/Load Packages and Depedencies </font>"
+    "# <font color= #6B6B6B> 2. Install/Load Packages and Dependencies </font>"
    ]
   },
   {
@@ -139,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color= #6B6B6B> 2.2 Files Dependencies </font> <font color= #555555>"
+    "## <font color= #6B6B6B> 2.2 File Dependencies </font> <font color= #555555>"
    ]
   },
   {
@@ -30984,16 +31009,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# DELETE THIS CELL IN YOUR FILE\n",
     "\n",
-    "# Citations, and other references you are using.\n",
+    "James Chen, Thomas Brock, Pete Rathburn. (2021). Fair Value. 21/06/2022, de Investopedia Sitio web: https://www.investopedia.com/terms/f/fairvalue.asp\n",
     "\n",
-    "# DO INCLUDE THE FOLLOWING CITATION FOR THIS TEMPLATE"
+    "Joseph L. Doob (1990). Stochastic processes. Wiley. pp. 46, 47.\n",
+    "\n",
+    "Juan Francisco Muñoz-Elguezabal. (July 15, 2017). Asset Pricing Theory\n",
+    "\n",
+    "ROLL, R. (1984). A Simple Implicit Measure of the Effective Bid-Ask Spread in an Efficient Market. The Journal of Finance, 39(4), 1127–1139. https://doi.org/10.1111/j.1540-6261.1984.tb03897.x\n"
    ]
   },
   {
